reverted alignment bug in logo

--- a/ai-edge/rise.css
+++ b/ai-edge/rise.css
@@ -1,5 +1,6 @@
 div.logo {
     position: absolute;
+    right: 1%;
     top: 1%;
     margin: 5px;
 }
